--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -23,6 +23,15 @@
        align-items: center;
    }
 
+   #page-search-results .cards{
+       grid-template-columns: 1fr;
+
+
+   }
+
+   #page-search-results .cards img{
+    height: 200px;
+   }
 
 }
 
